--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,9 @@ lib_extra_dirs = ${workspacedir}/lib/legoino-master
 lib_deps = 
 	h2zero/NimBLE-Arduino@^1.4.2
 	thomasfredericks/Bounce2@^2.72
+	dxinteractive/ResponsiveAnalogRead@^1.2.1
 lib_ldf_mode = chain+
-upload_port = //dev/ttyUSB0
+upload_port = COM6
+monitor_port = COM6
+upload_speed = 115200
+; upload_resetmethod = nodemcutha
