Remove vendored Legoino library, use PlatformIO lib_deps instead
Replace the manually downloaded lib/legoino-master directory with a
PlatformIO registry dependency (corneliusmunz/Legoino). This removes
~40 vendored files and lets PlatformIO handle library management
automatically via lib_deps.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,8 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-lib_extra_dirs = ${workspacedir}/lib/legoino-master
-lib_deps = 
+lib_deps =
+	corneliusmunz/Legoino
 	h2zero/NimBLE-Arduino@^1.4.2
 	thomasfredericks/Bounce2@^2.72
 	dxinteractive/ResponsiveAnalogRead@^1.2.1
